--- a/Prüfung_lz035.Rmd
+++ b/Prüfung_lz035.Rmd
@@ -14,7 +14,7 @@ library(igraph)
 
 ```{r Netzwerk einlesen}
 
-# Mein Codebuch: https://github.com/lara270402/Testat/blob/main/Codebuch_Testat_lz035.Rmd
+# Mein Codebuch: https://github.com/lara270402/Testat/blob/main/Codebuch_Testat_lz035.md
 # GitHubLink allgemein: https://github.com/lara270402/Testat 
 
 # Programmbibliothek laden
